end of workshop 04

--- a/css/facebook.css
+++ b/css/facebook.css
@@ -3,6 +3,12 @@
   position: fixed;
   bottom: 0px;
   right: 20px;
+  /* Applies the given border style to all sides. */
+  border: 1px solid #000;
+  /* Removes the border on the bottom. */
+  border-bottom: none;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 body {
   padding-top: 60px;
@@ -39,5 +45,9 @@ body {
   border-bottom: 1px solid lightgrey;
   margin-bottom: 5px
 }
+.green {
+  color: green;
+}
+
 
 
